- Makes sure registry key is writable before adding it to array
- Displays type of exception in crash reporter
- Log files are copied and displayed only if there were bad registry keys
- Fixed program crashing when it calls RegEnumValue() in 64 bit
- Scans needed Wow6432Node subkeys for errors (needs more updating)
- The logger is more verbose
- Fixed updater because it wasnt checking the right timespan
- Added option to disable log being showed after scanning
- Only checks last time since update when program starts

+ Version 1.2 Released

- Scan dialog is thread safe
- Scanners use base class to save coding and work
- Added details control to display more information
- Convert value to string function is now a static function
- Checks if registry key is not null before continuing in AppInfo.cs
- Checks for MsiExec in UninstallString instead of evaluating WindowsInstaller in AppInfo.cs
- Changed the log formatting of bad registry keys
- Displays files and directorys being scanned in scan dialog
- Resets details control after scanning is finished
- Fixed null bug in COMObjects.ScanClasses()
- Catches DllNotFoundException if srclient.dll cant be found when creating system restore points
- Catches Exception if unable to convert SystemComponent or EstimatedSize when retrieving ARP info
- Disabled textbox editing in startup manager
- Uses TreeViewAdv so UI has more nicer graphical design
- Fixed "Index was outside the bounds of the array" exception in xmlRegistry.addRegistryValues(Int32 hKey)
- Startup file paths are checked before being added to manager
- Startup scanner has been fixed (also added 64bit compatiblity)
- Cross checks start menu registry keys with folders for obsolete keys
- Did some minor fixes to the ProgramList class
- Files and folders can be added to the exclude list
- Doesnt recursively check for obsolete software keys
- Added checks for files and folders before there added to the problem list